# personal_agent

./: .env.example  .gitignore  Makefile  QUICKSTART.md  README.md  agent_demo.py  agent_demo_v2.py  agent_demo_v2_langchain.py  lg_agent_demo.py  lg_agent_demo_marimo.py  pyproject.toml  requirements.txt  setup.sh  test_email_body.py  test_gmx_caldav.py  test_gmx_connection.py
__marimo__/session/: agent_demo.py.json  agent_demo_v2_langchain.py.json  lg_agent_demo_marimo.py.json
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  CALDAV_FIX_SUMMARY.md  USAGE.md  agent_demo.md
src/: __init__.py  cli.py
src/agents/: base.py
src/agents/communication/: __init__.py  agent.py
src/agents/communication/tools/: __init__.py  calendar.py  email.py
src/config/: settings.py
src/storage/: __init__.py  factory.py  interface.py  local.py  s3.py
test/: test_agent_demo.py
tests/unit/: test_storage.py
